--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@sendgrid/mail": "^7.4.6",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
